Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.

Ver 7.38 (08/07/02)
- remove the virtual character of insert in Constrained_triangulation
  Constrained_Delaunay_triangulation_2 and Constrained_triangulation_plus_2.
  There are now virtual versions of those functions with a different name:
  virtual_insert()
- fixed overloaded insert and locate of Triangulation_hierarachy_2
  to make Triangulation_hierarachy_2 compatible with 
  Constrained_triangulation_plus_2
- remove depraated files in the doc 
  Triangulation_2_ref/Triangulation_face_2.tex
  and Triangulation_2_ref/Triangulation_vertex_2.tex

Ver 7.37 (29/05/02)
- added Trivial_iterator.h 
- added DS_Container.h to package Triangulation_2 to reduce dependencies wrto
  Triangulation_3

Ver 7.36 (28/05/02)
- nothing.

Ver 7.33 (28/05/02)
- fixed details in doc

Ver 7.32 (13/05/02)
- fixed undefined references in the doc

Ver 7.31 (9/05/02)
- fixed previous hack
- update the doc 

Ver 7.30 (7/05/02)
- added  a hack to compile on Sun_CC

Ver 7.29 (7/05/02)
- fixed label in doc

Ver 7.28 (3/05/02)
- add a workaround in Constraint_hierarchy_2.h
  for the splice bug of CC
- add missing references

Ver 7.27 (23/04/02)
- split support /Handle doc into user and reference manuals

Ver 7.26 (23/04/02)
- fixes in doc

Ver 7.25 (17/04/02)
- fixes in doc

Ver 7.24 (15/04/02)
- fix in the doc

Ver 7.23 (15/04/02)
- updated the doc of constrained triangulations
- fixed demo/Triangulation_2/constrained.C for VC6

Ver 7.22 (12/04/02)
- doc fixes

Ver 7.21 (11/04/02)
- again a fix for VC7
- splitted manual pages for Handle

Ver 7.20 (10/04/02)
- add special_insert_in_edge() for Delaunay_constrained_triangulations
- fixes for VC7

Ver 7.19 (08/04/02)
- fixed copy constructor oc Constraint_hierarchy

Ver 7.18 (08/04/02)
- fixed intersect functions in Constrained triangulations 
  and Constrained_triangulation_plus 